# getopty

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  getopty.h
example/: getopty_example.cpp
test/: CMakeLists.txt  getopty_test.c  minunit.h  odr_check.c
